[tool.poetry]
name = "project-zero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
markdown = "^3.2.2"
bs4 = "^0.0.1"
aiohttp = "^3.6.2"
replit = "^2.0.0"
flask = "^1.1.2"
detectlanguage = "^1.4.0"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
